Bug 16100 [Alternate] Buttons in patron toolbar are styled differently
This patch makes modifications to the global CSS file in order to make
font rendering in buttons more consistent. The Bootstrap CSS is setting
font styles which are not being consistently overriden by the staff
client's CSS.

To test, apply the patch and clear your browser cache if necessary.
Check several places to confirm that the changes look correct and don't
go too far:

- Go to the "Patrons" home page. The "New patron" and "Patron lists"
  buttons should look consistent with each other.
- Locate a patron and view their detail page. Toolbar buttons should
  look correct.
- Go to Administration -> Libraries and Groups and click the "Delete"
  button on any library. Verify that the warning dialog buttons look
  correct.
- Go to Cataloging and open the advanced editor. Confirm that toolbar
  buttons look correct.
- Go to Tools -> Stage MARC records for import and confirm that the
  "Upload file" button looks consistent with other generic submit
  buttons.

Applied alternate patch only, followed test plan, buttons display as expected.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1161,7 +1161,7 @@ div.alert strong {
 }
 
 .dialog button {
-    background-color : #FFF;
+    background: #fff none;
     border: 1px outset #999999;
     border-top-color: #666;
     border-left-color: #666;
@@ -1624,11 +1624,11 @@ div#header_search input.submit {
 	padding : .1em;
 }
 
-input[type=submit]:active, input[type=button]:active, button.submit:active, a.submit:active {
+input[type=submit]:active, input[type=button]:active, button:active, a.submit:active {
 	border : 1px inset #999999;
 }
 
-input[type=submit], input[type=reset], input[type=button], input.submit, button.submit, a.submit {
+input[type=submit], input[type=reset], input[type=button], input.submit, button, a.submit {
 	border: 1px outset #999999;
 	border-top-color: #666;
 	border-left-color: #666;
@@ -1649,14 +1649,14 @@ input[type=submit]:disabled,
 input[type=reset]:disabled,
 input[type=button]:disabled,
 input.submit:disabled,
-button.submit:disabled,
+button:disabled,
 a.submit:disabled {
     color : #999;
     border : 1px solid #C0C0C0;
     background : #EEE none;
 }
 
-input[type=reset]:active, input[type=button]:active, input.submit:active, button.submit:active, a.submit:active {
+input[type=reset]:active, input[type=button]:active, input.submit:active, button:active, a.submit:active {
 	border : 1px inset #999999;
 }
 
@@ -2408,8 +2408,10 @@ video {
 }
 
 /* Bootstrap overrides */
+button,
 .btn {
     border-color : #ADADAD #ADADAD #949494;
+    font-family: arial,helvetica,clean,sans-serif;
 }
 
 .btn.btn-link {
